--- a/templates/feed/home.html
+++ b/templates/feed/home.html
@@ -33,19 +33,16 @@
     </select>
     <div style="border-left: 200px solid #ffffff;"></div>
 </div>
-<! -- Test -- >
-<div>
-	
-	<ul>
-		{% for post in posts %}
-			<li>{{ post.title }}</li>
-			
-		{% endfor %}
-		
-	</ul>
-	
-</div>
 
+<! -- Tests -- >
+<div>
+	<a>
+		{% for post in posts %}
+			{{ post.id }}
+			{{ post.creator.username }}
+		{% endfor %}
+	</a>
+</div>
 <div id="postPics">
 {% for post in posts %}
     <div class="picLine">
@@ -68,9 +65,13 @@
 				{% endif %}
                 <a href="" class="authorName">{{ post.creator.username }}</a>
 				{% if user.is_authenticated %}
-					<img class="heartButton" id="sampleHeart1" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+				
+				
+					<img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" onclick="toggleLiked({{ post.id }})" /></a>
 					<a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
+						
+						
 				{% endif %}
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
                 <a href=""><img src="{% static 'images/download.png' %}"
