--- a/templates/feed/home.html
+++ b/templates/feed/home.html
@@ -67,7 +67,7 @@
 				{% if user.is_authenticated %}
 				
 				
-					<img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" onclick="toggleLiked({{ post.id }})" /></a>
+					<img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
 					<a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
 						
