--- a/templates/feed/home.html
+++ b/templates/feed/home.html
@@ -1,4 +1,4 @@
-{% extends 'feed_templates/base.html' %}
+{% extends 'feed/base.html' %}
 {% load staticfiles %}
 
 
@@ -45,7 +45,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img class="heartButton" id="sampleHeart1" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <img class="heartButton" id="sampleHeart1" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -63,7 +63,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img class="heartButton" id="sampleHeart2" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <img class="heartButton" id="sampleHeart2" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -81,7 +81,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img class="heartButton" id="sampleHeart3" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <img class="heartButton" id="sampleHeart3" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -101,7 +101,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img class="heartButton" id="sampleHeart4" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <img class="heartButton" id="sampleHeart4" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -119,7 +119,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img class="heartButton" id="sampleHeart5" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <img class="heartButton" id="sampleHeart5" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -137,7 +137,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img class="heartButton" id="sampleHeart6" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <img class="heartButton" id="sampleHeart6" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -157,7 +157,7 @@
                             alt="followPic" /></div>
                 </a>
                 <a href="" class="authorName">{{ post.creator.username }}</a>
-                <a href=""><img class="heartButton" id="sampleHeart7" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
+                <img class="heartButton" id="sampleHeart7" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart2" /></a>
                 <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
                         alt="chat-bubble-dots" /></a>
                 <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
@@ -169,7 +169,7 @@
             <a href=""><img class="image" src="{{ MEDIA_URL }}samplePic8.png"
                     alt="samplePic8" /></a>
              <div class="allPicOpera">
-                <a href=""><img class="heartButton" id="sampleHeart8" width="45px"; style="transform: translate(5px,15px);"
+                <img class="heartButton" id="sampleHeart8" width="45px"; style="transform: translate(5px,15px);"
                         src="{{ MEDIA_URL }}profile.png" alt="profile" />
                     <div class="followPic"><img src="{% static 'images/followPic.png' %}"
                             alt="followPic" /></div>
