minor changes in views and forms

--- a/templates/feed/home.html
+++ b/templates/feed/home.html
@@ -1,5 +1,5 @@
 {% extends 'feed/base.html' %}
-{% load staticfiles %}
+{% load static %}
 
 
 {% block title_block %}
@@ -81,14 +81,6 @@
 {% endfor %}
 </div>
 
-<div id="paging">
-    <span>Previous</span>
-    <a href="">1</a>
-    <a href="">2</a>
-    <a href="">3</a>
-    <a href="">4</a>
-    <a href="">5</a>
-    <span>Next</span>
-</div>
+
 <br><br>
 {% endblock %}
