--- a/templates/feed/home.html
+++ b/templates/feed/home.html
@@ -1,5 +1,5 @@
 {% extends 'feed/base.html' %}
-{% load static %}
+{% load staticfiles %}
 
 
 {% block title_block %}
@@ -26,59 +26,76 @@
     <a href="{% url 'feed:food' %}" class="otherButton" style="background-color: #E3B5FF; border-color: #E3B5FF;">Food</a>
     <a href="{% url 'feed:trending' %}" class="otherButton" style="background-color: #FF5733; border-color: #FF5733;">Trending</a>
 </div>
-
+<div id="choose">
+    <select id="chooseButton">
+        <option value="Popular">Popular</option>
+        <option value="New">New</option>
+    </select>
+    <div style="border-left: 200px solid #ffffff;"></div>
+</div>
 
 <! -- Tests -- >
 <div>
 	<a>
-        {% if posts %}
-		    {% for post in posts %}
-			    {{ post.id }}
-		    	{{ post.creator.username }}
-		    {% endfor %}
-        {% else %}
-            <p>Feed empty.</p>
-        {% endif %}
+		{% for post in posts %}
+			{{ post.id }}
+			{{ post.creator.username }}
+		{% endfor %}
 	</a>
 </div>
 <div id="postPics">
-{% for post in posts %}
-    <div class="picLine">
-        <div class="pic" style="height: 600px;">
-			<a href=""><img class="image" width="200px";
-				src="{{ post.picture.url }}" alt="Image of {{ post.title }}"</a>
-            <div class="allPicOpera">
-				{% if post.creator.UserProfile.profile_picture %}
-	               <a href=""><img width="45px"; style="transform: translate(5px,15px);"
-                        src="{{ post.creator.profile_picture.url }}" alt="profile picture" />
-						<div class="followPic"><img src="{% static 'images/followPic.png' %}"
-                            alt="followPic" /></div>
-					</a>			
-				{% else %}
-					<a href=""><img width="45px"; style="transform: translate(5px,15px);"
-                        src="{{ MEDIA_URL }}profile.png" alt="profile picture1" />
-							<div class="followPic"><img src="{% static 'images/followPic.png' %}"
-								alt="followPic" /></div>
-					</a>
-				{% endif %}
-                <a href="" class="authorName">{{ post.creator.username }}</a>
-				{% if user.is_authenticated %}
-				
-				
-					<img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
-					<a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
-                        alt="chat-bubble-dots" /></a>
-						
-						
-				{% endif %}
-                <a href=""><img width="25px"; src="{% static 'images/share2.png' %}" alt="share2" /></a>
-                <a href=""><img src="{% static 'images/download.png' %}"
-                        alt="download" /></a>
-        </div>
-    </div>
-{% endfor %}
+<table>
+
+{% for post_row in posts %}
+    <tr>
+        {% for post in post_row%}
+            <td>
+            <div class="picLine">
+                <div class="pic" style="height: 600px;">
+                    <a href=""><img class="image" width="200px";
+                        src="{{ post.picture.url }}" alt="Image of {{ post.title }}"</a>
+                    <div class="allPicOpera">
+                        {% if post.creator.UserProfile.profile_picture %}
+                        <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                                src="{{ post.creator.profile_picture.url }}" alt="profile picture" />
+                                <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                                    alt="followPic" /></div>
+                            </a>			
+                        {% else %}
+                            <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                                src="{{ MEDIA_URL }}profile.png" alt="profile picture1" />
+                                    <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                                        alt="followPic" /></div>
+                            </a>
+                        {% endif %}
+                        <a href="" class="authorName">{{ post.creator.username }}</a>
+                        {% if user.is_authenticated %}
+                        
+                        
+                            <img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
+                            <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                                alt="chat-bubble-dots" /></a>
+                                
+                                
+                        {% endif %}
+
+                    </div>
+                </div>
+            </td>
+            {%endfor%}
+        </tr>
+    {% endfor %}
+</table>
 </div>
 
-
+<div id="paging">
+    <span>Previous</span>
+    <a href="">1</a>
+    <a href="">2</a>
+    <a href="">3</a>
+    <a href="">4</a>
+    <a href="">5</a>
+    <span>Next</span>
+</div>
 <br><br>
 {% endblock %}
