categories should work now

--- a/templates/feed/base.html
+++ b/templates/feed/base.html
@@ -58,9 +58,9 @@
                 <div class="rowline"></div>
                 <div id="cat">
                     <a href="{% url 'feed:home' %}" class="otherButton" style = "background-color: #4F81FF; border-color: #4F81FF;">Home</a>
-                    <a href="{% url 'feed:show-category' 'craft' %}" class="otherButton" style="background-color: #00BAAD; border-color: #00BAAD;">Craft</a>
-                    <a href="{% url 'feed:show-category' 'diy' %}" class="otherButton" style="background-color: #EDD70E; border-color: #EDD70E;">DIY</a>
-                    <a href="{% url 'feed:show-category' 'food' %}" class="otherButton" style="background-color: #E3B5FF; border-color: #E3B5FF;">Food</a>
+                    <a href="{% url 'feed:show-category' 'Craft' %}" class="otherButton" style="background-color: #00BAAD; border-color: #00BAAD;">Craft</a>
+                    <a href="{% url 'feed:show-category' 'Diy' %}" class="otherButton" style="background-color: #EDD70E; border-color: #EDD70E;">DIY</a>
+                    <a href="{% url 'feed:show-category' 'Cook' %}" class="otherButton" style="background-color: #E3B5FF; border-color: #E3B5FF;">Food</a>
                     <a href="{% url 'feed:trending' %}" class="otherButton" style="background-color: #FF5733; border-color: #FF5733;">Trending</a>
                 </div>
                 {% block body_block %}
