removed everything hardcoded from searchTitle.html

--- a/templates/feed/searchTitle.html
+++ b/templates/feed/searchTitle.html
@@ -3,65 +3,51 @@
 
 
 {% block title_block %}
-    Search
+    Search Posts
 {% endblock %}
 
 {% block body_block %}
 <link rel="stylesheet" href="/static/css/searchTitle.css" type="text/css">
+{% if user.is_authenticated %}
 <div id="frame">
-    <div id="tipText"><span>All results have been shown below.</span></div>
-    <div class="rowLine"></div>
-    <div id="catFrame">
-        <div id="cat1">
-            Title
-            <div class="buttonUnderline"></div>
-        </div>
-        <div id="cat2">
-            <a href="">User</a>
-            <div class="buttonUnderline"></div>
-        </div>
-    </div>
+    <div id="tipText"><span>All results are shown below.</span></div>
+    
     <div id="resultFrame">
-        <div class="picFrame">
-            <div class="subpicFrame">
-                <a href=""><img src="{{ MEDIA_URL }}samplePic1.png" alt="samplePic1" /></a>
-            </div>
-            <div class="titleFrame"><a href="">Title</a></div>
-        </div>
-        <div class="picFrame">
-            <div class="subpicFrame">
-                <a href=""><img src="{{ MEDIA_URL }}samplePic2.png" alt="samplePic2" /></a>
-            </div>
-            <div class="titleFrame"><a href="">Title</a></div>
-        </div>
-        <div class="picFrame">
-            <div class="subpicFrame">
-                <a href=""><img src="{{ MEDIA_URL }}samplePic3.png" alt="samplePic3" /></a>
-            </div>
-            <div class="titleFrame"><a href="">Title</a></div>
-        </div>
-        <div class="picFrame">
-            <div class="subpicFrame">
-                <a href=""><img src="{{ MEDIA_URL }}samplePic4.png" alt="samplePic4" /></a>
-            </div>
-            <div class="titleFrame"><a href="">Title</a></div>
-        </div>
-        <div class="picFrame">
-            <div class="subpicFrame">
-                <a href=""><img src="{{ MEDIA_URL }}samplePic5.png" alt="samplePic5" /></a>
-            </div>
-            <div class="titleFrame"><a href="">Title</a></div>
-        </div>
+	{% for post in matching_posts %}
+	
+		<td>
+            <div class="picLine">
+                <div class="pic" style="height: 600px;">
+                    <a href=""><img class="image" width="200px";
+                        src="{{ post.picture.url }}" alt="Image of {{ post.title }}"</a>
+                    <div class="allPicOpera">
+                        {% if post.creator.UserProfile.profile_picture %}
+                        <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                                src="{{ post.creator.profile_picture.url }}" alt="profile picture" />
+                                <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                                    alt="followPic" /></div>
+                            </a>			
+                        {% else %}
+                            <a href=""><img width="45px"; style="transform: translate(5px,15px);"
+                                src="{{ MEDIA_URL }}profile.png" alt="profile picture1" />
+                                    <div class="followPic"><img src="{% static 'images/followPic.png' %}"
+                                        alt="followPic" /></div>
+                            </a>
+                        {% endif %}
+                        <a href="" class="authorName">{{ post.creator.username }}</a>
+                        {% if user.is_authenticated %}
+                        
+                            <img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
+                            <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                                alt="chat-bubble-dots" /></a>
+
+                    </div>
+                </div>
+            </td>	
+	{% endfor %}
+        
     </div>
-    <br>
-    <div id="paging">
-        <span>Previous</span>
-        <a href="">1</a>
-        <a href="">2</a>
-        <a href="">3</a>
-        <a href="">4</a>
-        <a href="">5</a>
-        <span>Next</span>
-    </div><br>
+    
 </div>
+{% endif %}
 {% endblock %}
